# MP-torchfde

./: .gitignore  README_fdeadjoint.md  README_predictor_mixed_precision.md
rampfde/: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
rampfde/.github/: TESTING.md
rampfde/.github/workflows/: ci.yml  publish.yml  quality.yml  test-full.yml
rampfde/examples/: compare_fde_precision.py
rampfde/paper/: .gitignore  README.md  analysis_utils.py  experiment_runtime.py  fde_tests_June_9.md  main-MP.tex  process_all_results.py
rampfde/paper/adjoint_scaling/: README.md  fig_test_adjoint_scaling.tex  run_adjoint_scaling.py  run_slurm.sh
rampfde/paper/cnf/: README.md  aggregate_cnf_results.py  cnf.py  extract_cnf_subplots.py  generate_cnf_overview_wide.py  generate_experiment_table.py  job_cnf.sbatch  process_results.sh  run_experiment.sh  run_test.sh  toy_data.py
rampfde/paper/fde_mnist/: compare_results.py  run_experiment.sh  run_test.sh  submit_experiment.sbatch  train_fde_mnist.py
rampfde/paper/fde_stl10/: compare_results.py  submit_experiment.sbatch  train_fde_stl10.py
rampfde/paper/lotka_volterra/: compare_results.py  submit_experiment.sbatch  train_lotka_volterra.py
rampfde/paper/otflowlarge/: Phi.py  README.md  aggregate_otflowlarge_results.py  download_datasets.py  generate_otflowlarge_table.py  job_otflowlarge.sbatch  mmd.py  otflowlarge.py  otflowlarge_reference.py  process_results.sh  run_experiment.sh  run_test.sh
rampfde/paper/roundoff/: README.md  job_roundoff_cnf.sbatch  plot_cnf_roundoff.py  plot_roundoff.py  plot_roundoff_comparison.py  plot_torchmpnode_dynamic.py  process_results.sh  roundoff_analyzer.py  roundoff_cnf.py  run_experiment.sh  run_test.sh
rampfde/rampde/: __init__.py  _version.py  fdeint.py  fixed_grid_base.py  fixed_grid_dynamic.py  fixed_grid_unscaled.py  fixed_grid_unscaled_safe.py  increment.py  loss_scalers.py  odeint.py  utils.py
rampfde/tests/: README.md  run_all_tests.py
(+78 files in other folders)
