[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rampde"
dynamic = ["version"]
description = "Mixed precision Neural ODE solvers for PyTorch"
authors = [
    {name = "EmoryMLIP", email = "lruthotto@emory.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["neural-ode", "pytorch", "mixed-precision", "differential-equations", "autocast"]
dependencies = [
    "torch>=2.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "torchdiffeq",
    "matplotlib",
    "pytest",
    "pytest-cov",
]
testing = [
    "torchdiffeq",
    "pytest",
    "pytest-cov",
]
benchmarks = [
    "torchdiffeq",
    "matplotlib",
]
examples = [
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/EmoryMLIP/rampde"
Repository = "https://github.com/EmoryMLIP/rampde"
Issues = "https://github.com/EmoryMLIP/rampde/issues"

[tool.setuptools]
packages = ["rampde"]

[tool.setuptools.dynamic]
version = {attr = "rampde._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose"